--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
                                   <li><a class="dropdown-item" href="#">Something else here</a></li>
                                 </ul>
                               </li>
-                       <button type="button" class="btn btn-secondary"><a href="#"></a>Accedi</button>       
-                      <button type="button"><a href="#"></a><i class="fa-solid fa-magnifying-glass"></i></button>
+                       <button type="button" class="btn btn-secondary btn_round"><a href="#"></a>Accedi</button>       
+                      <button type="button" class="btn_invisible"> <a href="#"></a><i class="fa-solid fa-magnifying-glass"></i></button>
                     </form>
                   </div>
                 </div>
@@ -123,4 +123,5 @@
     </header>
     
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </html>
