--- a/index.html
+++ b/index.html
@@ -177,51 +177,51 @@
         <!-- console ps5 -->
         <section>
             <div class="container text-center">
-                <p>PLAY HAS NO LIMITS</p>
+                <p class="text_blu">PLAY HAS NO LIMITS</p>
                 <h3>Ecco la PlayStation 5</h3>
                 <p>Tuffati in nuove possibilità di gioco</p>
                 <div class="row align-items-center">
-                    <div class="col-5 text-start">
+                    <div class="col-12 col-sm-5 text-start">
                         <h5>Console Playstation 5</h5>
                         <p>Sperimenta la nuova generazione di incredibili giochi Playstation.</p>
                         <button type="button"class="btn btn-primary btn_round">Maggiori informazioni</button>
                     </div>
-                    <div class="col-7">
+                    <div class="col-12 col-sm-5">
                         <div>
                             <img class="img-fluid" src="img/playstation-5-thumb.png" alt="playstation-5">
                         </div> 
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col">
+                <div class="row justify-content-around">
+                    <div class="col-4 col-xxl">
                         <div>
                             <img class="img-fluid" src="img/playstation-5-thumb.png" alt="playstation-5">
                         </div>
-                        <p>Console PS5</p> 
+                        <p class="d-none d-md-block">Console PS5</p> 
                     </div>
-                    <div class="col">
+                    <div class="col-4 col-xxl">
                         <div>
                             <img class="img-fluid" src="img/joypad-thumb.png" alt="joypad">
                         </div>
-                        <p>Controller wireless DualSense™</p> 
+                        <p class="d-none d-md-block">Controller wireless DualSense™</p> 
                     </div>
-                    <div class="col">
+                    <div class="col-4 col-xxl">
                         <div>
                             <img class="img-fluid" src="img/headset-thumb.png" alt="headset">
                         </div> 
-                        <p>Cuffie wireless con microfono PULSE 3™</p>
+                        <p class="d-none d-md-block">Cuffie wireless con microfono PULSE 3™</p>
                     </div>
-                    <div class="col">
+                    <div class="col-4 col-xxl">
                         <div>
                             <img class="img-fluid" src="img/remote-thumb.png" alt="remote">
                         </div>
-                        <p>Telecomando Media</p> 
+                        <p class="d-none d-md-block">Telecomando Media</p> 
                     </div>
-                    <div class="col">
+                    <div class="col-4 col-xxl">
                         <div>
                             <img class="img-fluid" src="img/camera-thumb.jpg" alt="camera">
                         </div> 
-                        <p>Telecamera HD</p>
+                        <p class="d-none d-md-block">Telecamera HD</p>
                     </div>
                 </div>
             </div>
