sezione accessori fatta

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             </div>
             <!-- carosel hero -->
             <div class="container carosel">
-                <div class="row g-4 d-flex">
+                <div class="row g-4">
                     <div class="col-6 col-sm-4 col-md-4 col-xxl-2">
                         <div class="card_image">
                             <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
@@ -246,6 +246,123 @@
             </div>
         </section>
         <!--/hero2-->
+        <!-- new releases -->
+        <section class="new_releases">
+            <div class="container pt-5">
+                <h4>Nuove uscite</h4>
+                <h6>Giochi incredibili per PS$ e PS5 disponibili ora</h6>
+                <div class="row">
+                    <div class="col-6 col-sm-4 col-xxl-2">
+                        <div class="card_image">
+                            <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="skate">
+                        </div>
+                        <p>Tony Hawk's™ Pro Skater™ 1 + 2</p>
+                    </div>
+                    <div class="col-6 col-sm-4 col-xxl-2">
+                        <div class="card_image">
+                            <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Cras">
+                        </div>
+                        <p>Crash Bandicoot 4: It's About Time</p>
+                    </div>
+                    <div class="col-6 col-sm-4 col-xxl-2">
+                        <div class="card_image">
+                            <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="skate">
+                        </div>
+                        <p>Tony Hawk's™ Pro Skater™ 1 + 2</p>
+                    </div>
+                    <div class="col-6 col-sm-4 col-xxl-2">
+                        <div class="card_image">
+                            <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Cras">
+                        </div>
+                        <p>Crash Bandicoot 4: It's About Time</p>
+                    </div>
+                    <div class="col-6 col-sm-4 col-xxl-2">
+                        <div class="card_image">
+                            <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="skate">
+                        </div>
+                        <p>Tony Hawk's™ Pro Skater™ 1 + 2</p>
+                    </div>
+                    <div class="col-6 col-sm-4 col-xxl-2">
+                        <div class="card_image">
+                            <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Cras">
+                        </div>
+                        <p>Crash Bandicoot 4: It's About Time</p>
+                    </div>
+                    <div class="col-6 col-sm-4 col-xxl-2">
+                        <div class="card_image">
+                            <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="skate">
+                        </div>
+                        <p>Tony Hawk's™ Pro Skater™ 1 + 2</p>
+                    </div>
+                    <div class="col-6 col-sm-4 col-xxl-2">
+                        <div class="card_image">
+                            <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Cras">
+                        </div>
+                        <p>Crash Bandicoot 4: It's About Time</p>
+                    </div>
+                    <div class="col-6 col-sm-4 col-xxl-2">
+                        <div class="card_image">
+                            <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="skate">
+                        </div>
+                        <p>Tony Hawk's™ Pro Skater™ 1 + 2</p>
+                    </div>
+                    <div class="col-6 col-sm-4 col-xxl-2">
+                        <div class="card_image">
+                            <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Cras">
+                        </div>
+                        <p>Crash Bandicoot 4: It's About Time</p>
+                    </div>
+                    <div class="col-6 col-sm-4 col-xxl-2">
+                        <div class="card_image">
+                            <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="skate">
+                        </div>
+                        <p>Tony Hawk's™ Pro Skater™ 1 + 2</p>
+                    </div>
+                    <div class="col-6 col-sm-4 col-xxl-2">
+                        <div class="card_image">
+                            <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Cras">
+                        </div>
+                        <p>Crash Bandicoot 4: It's About Time</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--/new releases -->
+        <!-- console ps4 -->
+        <section>
+            <div class="container text-center pt-5">
+                <div class="row">
+                    <h3>Esplora PlayStation® 4</h3>
+                    <p>Giochi incredibili e intrattenimento senza fine.</p>
+                    <p>Non c'è mai stato un momento migliore per giocare sulla tua PS4</p>
+                    <div class="col-12 col-md-4">
+                        <div>
+                            <img class="img-fluid" src="img/ps4-slim-homepage-image-block.jpg" alt="playstation-4">
+                        </div>
+                        <h3>Playstation 4</h3>
+                        <p>Giochi incredibili live su PS4, con 1 TB di spazio di archiviazione.</p>
+                        <button type="button"class="btn btn-primary btn_round">Scopri di più</button> 
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <div>
+                            <img class="img-fluid" src="img/double11-202010-tw-psvr.jpg" alt="VR">
+                        </div>
+                        <h3>Playstation VR</h3>
+                        <p>Olter 500 titoli ed esperienze di gioco. Scoprili tutti.</p>
+                        <button type="button"class="btn btn-primary btn_round">Scopri di più</button>  
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <div>
+                            <img class="img-fluid" src="img/dualshock-4-listing-thumb.jpg" alt="dualshock">
+                        </div> 
+                        <h3>Accessori</h3>
+                        <p>Migliora la tua esperienza PS$ con una gamma di accessori ufficiali.</p>
+                        <button type="button"class="btn btn-primary btn_round">Scopri di più</button> 
+                    </div>
+                </div>
+            </div>           
+        </section>
+        <!--/console ps4 -->
     </main>
     
 </body>
