--- a/index.html
+++ b/index.html
@@ -363,6 +363,31 @@
             </div>           
         </section>
         <!--/console ps4 -->
+        <!-- playstation plus -->
+        <section class="ps_plus">
+                <div class="container">
+                    <div class="row align-items-center">
+                        <div class="col-12 col-sm-12 col-md-5">
+                            <div class="container pt-5">
+                                <div class="row ">
+                                    <div class="col">
+                                        <img class="img-fluid" src="img/ps-plus-logo.png" alt="banner">
+                                    </div>
+                                </div>
+                            </div>
+                            <p>Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online, giochi mensili,sconti esclusivi e altro ancora.
+                            </p>
+                            <button type="button" class="btn btn-primary btn_round btn_psplus">Acquista ora</button>
+                        </div>
+                        <div class=" col-md-7">
+                            <div class="psplus_img d-none d-md-block">
+                                <img class="img-fluid" src="img/ps-plus-april-monthly-games-featured-image-block.png" alt="psplusbanner">
+                            </div>  
+                        </div>
+                    </div>
+                </div>          
+        </section>
+        <!--/playstation plus -->
     </main>
     
 </body>
