sezione sconti fatta

--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
         </section>
         <!--/console ps4 -->
         <!-- playstation plus -->
-        <section class="ps_plus">
+        <section class="ps_plus mt-5">
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="col-12 col-sm-12 col-md-5">
@@ -377,7 +377,7 @@
                             </div>
                             <p>Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online, giochi mensili,sconti esclusivi e altro ancora.
                             </p>
-                            <button type="button" class="btn btn-primary btn_round btn_psplus">Acquista ora</button>
+                            <button type="button" class="btn btn-primary btn_round btn_psplus">Esplora PlayStation plus</button>
                         </div>
                         <div class=" col-md-7">
                             <div class="psplus_img d-none d-md-block">
@@ -388,6 +388,32 @@
                 </div>          
         </section>
         <!--/playstation plus -->
+        <!-- sconti -->
+        <section>
+            <div class="container text-center pt-5">
+                <h3>Nuovi sconti sul PlayStation Store</h3>
+                <p>Sconti pazzeschi, collezioni curate e saldi stagionali su PS5, PS4 e PS VR, tutti in un unico posto.</p>
+                <div class="row">
+                    <div class="col-12 col-md-4 pt-5">
+                        <div class="discount">
+                            <img src="img/playstation-store-games-under-20-spotlight.jpg" alt="discount-1">
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4 pt-5">
+                        <div class="discount">
+                            <img src="img/playstation-store-golden-week-sale-spotlight.jpg" alt="discount-2">
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4 pt-5">
+                        <div class="discount">
+                            <img src="img/playstation-store-free-to-play-spotlight.png" alt="discount-3">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+        <!-- sconti -->
     </main>
     
 </body>
