--- a/index.html
+++ b/index.html
@@ -413,7 +413,31 @@
             </div>
 
         </section>
-        <!-- sconti -->
+        <!--/sconti -->
+        <!--playstation now-->
+        <section class="ps_now mt-5">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-12 col-sm-12 col-md-5">
+                        <div class="container pt-5">
+                            <div class="row ">
+                                <div class="col">
+                                    <img class="img-fluid" src="img/ps-now-logo-two-column.png" alt="psnowbanner">
+                                </div>
+                            </div>
+                        </div>
+                        <p>Ottieni l'accesso immediato a una vastissima raccolta di oltre 800 giochi per PS4, PS3 e PS2 su Ps4 o PC Windows, con nuovi titoli aggiunti ogni mese.
+                        </p>
+                        <button type="button" class="btn btn-light btn_round">Esplora PlayStation Now</button>
+                    </div>
+                    <div class=" col-md-7">
+                        <div class="psplus_img d-none d-md-block">
+                            <img class="img-fluid" src="img/ps-now-april-featured-image-block.png" alt="psnow">
+                        </div>  
+                    </div>
+                </div>
+            </div>          
+    </section>
     </main>
     
 </body>
