--- a/index.html
+++ b/index.html
@@ -224,8 +224,7 @@
                         <p class="d-none d-md-block">Telecamera HD</p>
                     </div>
                 </div>
-            </div>
-            
+            </div>   
         </section>
         <!--/console ps5 -->
         <!-- hero 2 -->
@@ -437,8 +436,92 @@
                     </div>
                 </div>
             </div>          
-    </section>
+        </section>
+        <!--/playstation now-->
+        <!-- media -->
+        <section>
+            <div class="container pt-5 text-center">
+                <h3>Seguici sui social media</h3>
+                <div class="row pt-5 justify-content-center">
+                    <div class="col-6 col-sm-2">
+                        <div class="media_img">
+                            <img src="img/twitter.jpg" alt="twitter">
+                        </div>
+                    </div>
+                    <div class="col-6 col-sm-2">
+                        <div class="media_img">
+                            <img src="img/facebook.jpg" alt="facebook">
+                        </div>
+                    </div>
+                    <div class="col-6 col-sm-2">
+                        <div class="media_img">
+                            <img src="img/instagram.jpg" alt="instagram">
+                        </div>
+                    </div>
+                    <div class="col-6 col-sm-2">
+                        <div class="media_img">
+                            <img src="img/youtube.png" alt="youtube">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--/media -->
     </main>
+    <footer class="pt-5">
+        <div class="footer py-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-xxl-6">
+                        <div>
+                            <img src="img/ps-footer.svg" alt="ps-footer">
+                        </div> 
+                        <p><i class="fa-solid fa-globe"></i> Country/Region: Italy</p>
+                    </div>
+                    <div class="col-12 col-xxl-6">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-12 col-md-4">
+                                    <div class="list-group">
+                                        <a href="#" class=" list-group-item-action">A link item</a>
+                                        <a href="#" class=" list-group-item-action">A link item</a>
+                                        <a href="#" class=" list-group-item-action">A link item</a>
+                                        <a href="#" class=" list-group-item-action">A link item</a>
+                                        <a href="#" class=" list-group-item-action">A link item</a>
+                                    </div>
+                                </div>
+                                <div class="col-12 col-md-4">
+                                    <div class="list-group">
+                                        <a href="#" class=" list-group-item-action">A link item</a>
+                                        <a href="#" class=" list-group-item-action">A link item</a>
+                                        <a href="#" class=" list-group-item-action">A link item</a>
+                                        <a href="#" class=" list-group-item-action">A link item</a>
+                                        <a href="#" class=" list-group-item-action">A link item</a>
+                                    </div>
+                                </div>
+                                <div class="col-12 col-md-4">
+                                    <div class="list-group">
+                                        <a href="#" class=" list-group-item-action">A link item</a>
+                                        <a href="#" class=" list-group-item-action">A link item</a>
+                                        <a href="#" class=" list-group-item-action">A link item</a>
+                                        <a href="#" class=" list-group-item-action">A link item</a>
+                                        <a href="#" class=" list-group-item-action">A link item</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-xxl-6">
+                        <div class="sie-logo">
+                            <img src="img/sie-logo.svg" alt="sie-logo">
+                        </div>
+                       <p>Website ©2021 Sony Interactive Enterainment Europe limited. Tutti i contenuti, i nomi dei giochi, nomi commercoiali e/o di abbigliamento, marchi registrati, grafica e immagini associati sono marchi registrato e/o materiale protetto da pobyright dei rispettivi proprietari.Tutti i diritti riservati</p>
+                    </div>
+                </div>
+            </div>    
+        </div>
+    </footer>
+
     
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
