--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <main>
         <!-- hero section -->
         <section>
-            <div class="hero_container">
+            <div class="hero_container mb-5">
                 <img class="hero_img" src="img/jumbo-bg.png" alt="jumbo">
                 <div class="container">
                     <div class="row">
@@ -136,7 +136,7 @@
                 </div>
                
             </div>
-            <!-- carosel hero -->
+        <!-- carosel hero -->
             <div class="container carosel">
                 <div class="row g-4">
                     <div class="col-6 col-sm-4 col-md-4 col-xxl-2">
@@ -171,7 +171,7 @@
                     </div>
                 </div>
             </div>
-            <!--/carosel hero -->
+        <!--/carosel hero -->
         </section>
         <!--/hero section -->
         <!-- console ps5 -->
@@ -427,7 +427,7 @@
                         </div>
                         <p>Ottieni l'accesso immediato a una vastissima raccolta di oltre 800 giochi per PS4, PS3 e PS2 su Ps4 o PC Windows, con nuovi titoli aggiunti ogni mese.
                         </p>
-                        <button type="button" class="btn btn-light btn_round">Esplora PlayStation Now</button>
+                        <button type="button" class="btn btn-primary btn_round btn_psnow">Esplora PlayStation Now</button>
                     </div>
                     <div class=" col-md-7">
                         <div class="psplus_img d-none d-md-block">
@@ -468,6 +468,7 @@
         </section>
         <!--/media -->
     </main>
+   <!--footer-->
     <footer class="pt-5">
         <div class="footer py-5">
             <div class="container">
@@ -521,8 +522,7 @@
             </div>    
         </div>
     </footer>
-
-    
+<!--/footer-->   
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </html>
