--- a/index.html
+++ b/index.html
@@ -192,32 +192,32 @@
                         </div> 
                     </div>
                 </div>
-                <div class="row justify-content-around">
-                    <div class="col-4 col-xxl">
+                <div class="row">
+                    <div class="col-4 col-md">
                         <div>
                             <img class="img-fluid" src="img/playstation-5-thumb.png" alt="playstation-5">
                         </div>
                         <p class="d-none d-md-block">Console PS5</p> 
                     </div>
-                    <div class="col-4 col-xxl">
+                    <div class="col-4 col-md">
                         <div>
                             <img class="img-fluid" src="img/joypad-thumb.png" alt="joypad">
                         </div>
                         <p class="d-none d-md-block">Controller wireless DualSense™</p> 
                     </div>
-                    <div class="col-4 col-xxl">
+                    <div class="col-4 col-md">
                         <div>
                             <img class="img-fluid" src="img/headset-thumb.png" alt="headset">
                         </div> 
                         <p class="d-none d-md-block">Cuffie wireless con microfono PULSE 3™</p>
                     </div>
-                    <div class="col-4 col-xxl">
+                    <div class="col-4 col-md">
                         <div>
                             <img class="img-fluid" src="img/remote-thumb.png" alt="remote">
                         </div>
                         <p class="d-none d-md-block">Telecomando Media</p> 
                     </div>
-                    <div class="col-4 col-xxl">
+                    <div class="col-4 col-md">
                         <div>
                             <img class="img-fluid" src="img/camera-thumb.jpg" alt="camera">
                         </div> 
