--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-xxl-4 hero_text">
-                            <img class="banner" src="img/returnal-hero-banner-logo.png" alt="banner">
+                            <img class="banner img-fluid" src="img/returnal-hero-banner-logo.png" alt="banner">
                             <h2>Rompi il cerchio</h2>
                             <h3>Rialzati dopo ogni scontiffa e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, disponivile in esclusiva su PS5</h3>
                             <button type="button" class="btn btn-danger btn_round">Acquista ora</button>
