--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <img class="hero_img" src="img/jumbo-bg.png" alt="jumbo">
                 <div class="container">
                     <div class="row">
-                        <div class="col-12 col-sm-12 col-md-12 col-xxl-4 hero_text">
+                        <div class="col-12 col-sm-12 col-md-12 col-xxl-4 hero_text mb-5 align-self-end">
                             <img class="banner img-fluid" src="img/returnal-hero-banner-logo.png" alt="banner">
                             <h2>Rompi il cerchio</h2>
                             <h3>Rialzati dopo ogni scontiffa e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, disponivile in esclusiva su PS5</h3>
@@ -410,7 +410,6 @@
                     </div>
                 </div>
             </div>
-
         </section>
         <!--/sconti -->
         <!--playstation now-->
